--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -1,7 +1,7 @@
-<div class="contacto-container">
+<address class="contacto-container">
     <h2>ESCRÍBEME...</h2>
     <div class="redes-sociales">
-        <a href="https://github.com/pincha1212" target="_blank" rel="noopener" class="icon github">
+        <a href="https://github.com/pincha1212" target="_blank" rel="noopener" aria-label="Visita mi perfil de GitHub" class="icon github">
             <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
         </a>
         <a href="https://www.linkedin.com/in/federico-barzola-7138b3216/" target="_blank" rel="noopener" class="icon linkedin">
@@ -14,4 +14,4 @@
             <button (click)="copiarCorreo()"> 📋 </button>
         </div>
     </div>
-</div>
+</address>
