--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,4 +1,4 @@
-<div class="experiencia-container">
-    <h2>Trabajé en...</h2>
+<section class="experiencia-container">
+    <h2>TRABAJÉ EN...</h2>
     <p>Buscando mi primera oportunidad profesional.</p>
-</div>
+</section>
