--- a/src/app/components/contacto/contacto.component.css
+++ b/src/app/components/contacto/contacto.component.css
@@ -2,7 +2,7 @@
     max-width: 800px;
     margin: 20px auto;
     text-align: center;
-    padding: 20px;
+    padding: 2rem;
     color: white;
 }
 
@@ -11,14 +11,16 @@
     margin-bottom: 20px;
     font-family: Arial, sans-serif;
     text-transform: uppercase;
+    justify-content: center;
+    margin: 0 auto;
 }
 
 /* Redes sociales */
 .redes-sociales {
     display: flex;
     justify-content: center;
-    gap: 20px;
-    margin-bottom: 20px;
+    gap: 2rem;
+    margin: 2rem 0;
 }
 
 .redes-sociales .icon {
@@ -59,7 +61,6 @@
 }
 
 .input-group input {
-    width: 70%;
     padding: 10px;
     font-size: 1rem;
     border: 1px solid #ccc;
