--- a/src/app/components/habilidades/habilidades.component.html
+++ b/src/app/components/habilidades/habilidades.component.html
@@ -1,5 +1,5 @@
 <div class="habilidades-container">
-    <h2>Domino...</h2>
+    <h2>APRENDÍ...</h2>
     <ul>
       <li *ngFor="let habilidad of habilidades">
         <img [src]="habilidad.icono" [alt]="habilidad.nombre" />
