--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -1,5 +1,5 @@
 <article class="proyectos-container">
-  <h2>UX/UI...</h2>
+  <h2>Demos y Prototipos</h2>
   <div class="proyectos-grid">
     <article class="proyecto-card card-base" *ngFor="let proyecto of proyectos">
       <div class="proyecto-imagen">
