--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -27,8 +27,7 @@
       <div class="mas-proyectos-content">
         <i class="fas fa-folder-plus"></i>
         <h3>Más Proyectos</h3>
-        <p>Descubre más de mis trabajos</p>
-        <a href="#" class="mas-proyectos-btn">
+        <a href="https://pincha1212.github.io/proyect-finder/" class="mas-proyectos-btn">
           <span>Ver más</span>
           <i class="fas fa-arrow-right"></i>
         </a>
